[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "liqpy"
authors = [{ name = "Rostyslav Bohomaz", email = "rostyslav.db@gmail.com" }]
description = "Unofficial Python libary for LiqPay API"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["liqpay", "api"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]
dependencies = [
    "httpx>=0.28.0",
]

[project.urls]
Repository = "https://github.com/rostyq/liqpy"

[tool.hatch.version]
path = "liqpy/__init__.py"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
]
